# xfdashboard

./: .gitignore  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt
common/: Makefile.am  meson.build  xfconf-settings.c
data/: Makefile.am  meson.build  org.xfce.xfdashboard-autostart.desktop.in.in  org.xfce.xfdashboard-settings.desktop.in.in  org.xfce.xfdashboard.desktop.in.in
data/data/: Makefile.am  meson.build
data/icons/: Makefile.am  meson.build
data/icons/64x64/: Makefile.am
data/icons/96x96/: Makefile.am
data/metainfo/: Makefile.am  meson.build  org.xfce.xfdashboard.metainfo.xml.in
data/themes/: Makefile.am  meson.build
data/themes/xfdashboard/: Makefile.am  meson.build  xfdashboard.theme.desktop.in.in
data/themes/xfdashboard-auber/: Makefile.am  meson.build  xfdashboard.theme.in.in
data/themes/xfdashboard-blue/: Makefile.am  meson.build  xfdashboard.theme.in.in
data/themes/xfdashboard-dark/: Makefile.am  meson.build  xfdashboard.theme.desktop.in.in
data/themes/xfdashboard-mint/: Makefile.am  meson.build  xfdashboard.theme.in.in
data/themes/xfdashboard-moranga/: Makefile.am  meson.build  xfdashboard.theme.in.in
data/themes/xfdashboard-wine/: Makefile.am  meson.build  xfdashboard.theme.in.in
libxfdashboard/: Makefile.am  action-button.c  actor.c  animation.c  application-button.c  application-database.c  application-tracker.c  applications-menu-model.c  applications-search-provider.c  applications-view.c  background.c  binding.c  bindings-pool.c  box-layout.c  button.c  click-action.c  collapse-box.c  compat.h  core.c  css-selector.c  debug.c  debug.h  desktop-app-info-action.c  desktop-app-info.c  drag-action.c  drop-action.c  dynamic-table-layout.c  emblem-effect.c  enums.c.template  fill-box-layout.c  focus-manager.c  focusable.c  gradient-color.c  image-content.c  label.c  libxfdashboard.h  live-window-simple.c  live-window.c  live-workspace.c  meson.build  (+44 more)
libxfdashboard/gdk/: window-tracker-backend-gdk.c
libxfdashboard/x11/: window-content-x11.c  window-tracker-backend-x11.c  window-tracker-monitor-x11.c  window-tracker-window-x11.c  window-tracker-workspace-x11.c  window-tracker-x11.c
plugins/: Makefile.am  meson.build
plugins/autopin-windows/: Makefile.am  autopin-windows.c  meson.build  plugin.c
plugins/clock-view/: Makefile.am  clock-view-settings.c  clock-view.c  meson.build  plugin.c
plugins/example-search-provider/: Makefile.am  example-search-provider.c  meson.build  plugin.c
plugins/gnome-shell-search-provider/: Makefile.am  gnome-shell-search-provider.c  meson.build  plugin.c
plugins/hot-corner/: Makefile.am  hot-corner-settings.c  hot-corner.c  meson.build  plugin.c
plugins/middle-click-window-close/: Makefile.am  meson.build  middle-click-window-close.c  plugin.c
plugins/recently-used-search-provider/: Makefile.am  meson.build  plugin.c  recently-used-search-provider.c
po/: LINGUAS  POTFILES.in  POTFILES.skip  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fr.po  gl.po  he.po  id.po  ie.po  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  th.po  tr.po  ug.po  uk.po  (+1 more)
settings/: Makefile.am  general.c  main.c  meson.build  plugins.c  settings.c  themes.c
xfdashboard/: Makefile.am  application.c  main.c  meson.build
